package br.com.caio.padroes.comportamentais.interpreter;

public interface Expression {
    int interpret();
}